{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 142,
  "lineage": "6c9ad292-8652-781e-0dbb-a90d6099df0c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "jumpbox_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.93.31.185",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-11T23:29:15.375-08:00",
            "id": "projects/cicd-project-412206/regions/asia-south1/addresses/jumpbox-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "jumpbox-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cicd-project-412206",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/regions/asia-south1/addresses/jumpbox-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/zones/asia-south1-a/instances/gcp-infra-jumpbox"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-11T23:30:10.696-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-http",
            "log_config": [],
            "name": "kopicloud-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "priority": 1000,
            "project": "cicd-project-412206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-11T23:30:10.224-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-rdp",
            "log_config": [],
            "name": "kopicloud-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "priority": 1000,
            "project": "cicd-project-412206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-11T23:30:10.413-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cicd-project-412206/global/firewalls/allow-rdp-iap",
            "log_config": [],
            "name": "allow-rdp-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "priority": 1000,
            "project": "cicd-project-412206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/firewalls/allow-rdp-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-new",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-11T23:30:10.288-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-ssh-new",
            "log_config": [],
            "name": "kopicloud-fw-allow-ssh-new",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "priority": 1000,
            "project": "cicd-project-412206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/firewalls/kopicloud-fw-allow-ssh-new",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20240111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/zones/asia-south1-a/disks/gcp-infra-jumpbox"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cicd-project-412206/zones/asia-south1-a/instances/gcp-infra-jumpbox",
            "instance_id": "5548935726229649351",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "CDr2nq3Kaes=",
            "name": "gcp-infra-jumpbox",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.31.185",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/regions/asia-south1/subnetworks/gcp-infra-public-subnet",
                "subnetwork_project": "cicd-project-412206"
              }
            ],
            "project": "cicd-project-412206",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/zones/asia-south1-a/instances/gcp-infra-jumpbox",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_address.jumpbox_static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cicd-project-412206/global/networks/gcp-infra",
            "mtu": 0,
            "name": "gcp-infra",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8849507549337384484",
            "project": "cicd-project-412206",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-11T23:30:13.978-08:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/cicd-project-412206/regions/asia-south1/subnetworks/gcp-infra-private-subnet",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "gcp-infra-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cicd-project-412206",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.92.0.0/20",
                "range_name": "gke-gcp-infra-gke-cluster-services-5e5a88a8"
              },
              {
                "ip_cidr_range": "10.88.0.0/14",
                "range_name": "gke-gcp-infra-gke-cluster-pods-5e5a88a8"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/regions/asia-south1/subnetworks/gcp-infra-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-11T23:30:14.086-08:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/cicd-project-412206/regions/asia-south1/subnetworks/gcp-infra-public-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "gcp-infra-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/global/networks/gcp-infra",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cicd-project-412206",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cicd-project-412206/regions/asia-south1/subnetworks/gcp-infra-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}